Added DB libs to SOURCE_LIBRARIES and PQXX to LIB_LIBRARIES

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ art_make(
     darkart_ODProducts
     ${DARKSIDECORE_DATA} 
     ${ART_UTILITIES} 
+    ${PQXX}
+    ${ART_FRAMEWORK_SERVICES_REGISTRY}
     ${CETLIB}
     ${FHICLCPP}
     ${MF_MESSAGELOGGER}
@@ -48,7 +50,7 @@ art_make(
     ${ART_FRAMEWORK_IO_SOURCES}
     ${DARKART_ODRECO_TOOLS} 
     ${DARKART_ODRECO_TOOLS_UTILITIES_SERVICE}
-    ${ART_FRAMEWORK_SERVICES_REGISTRY} 
+    ${DARKSIDECORE_ARTSERVICES_DBINTERFACE_SERVICE} 
     ${MF_MESSAGELOGGER}
     ${MF_UTILITIES}
     ${CETLIB}
